# opnai

./: Makefile  README.md  organizer.py  pyproject.toml
mac_organizer/: __init__.py  __main__.py  core.py  gui.py
tests/: test_gui.py  test_organizer.py
