[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macbook-smart-organizer"
version = "0.1.0"
description = "Content-aware file organizer for macOS"
requires-python = ">=3.9"

[project.scripts]
mac-organizer = "organizer:main"
mac-organizer-gui = "mac_organizer.gui:launch"

[project.optional-dependencies]
test = ["pytest"]
